--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "ethers": "^6.7.1",
     "firebase": "^11.8.1",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next": "15.3.2",
